Fixed .is-full content on Safari

--- a/scss/layout/app.scss
+++ b/scss/layout/app.scss
@@ -10,6 +10,8 @@
     &-scroll {
         position: relative;
 
+        display: flex;
+        flex-direction: column;
         flex: 1;
 
         width: 100%;
